--- a/HBaseproject01/pom.xml
+++ b/HBaseproject01/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.fspt</groupId>
-    <artifactId>HBaseproject01</artifactId>
+    <artifactId>HBaseProject01</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,18 +13,24 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-shaded-client</artifactId>
-            <version>2.0.0</version>
+            <version>2.5.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-common</artifactId>
+            <version>2.5.13</version> <!-- 和client版本一致 -->
         </dependency>
         <dependency>
             <groupId>net.sourceforge.javacsv</groupId>
             <artifactId>javacsv</artifactId>
+            <!-- Correct version: 2.0 (2.0.0 is invalid) -->
             <version>2.0</version>
         </dependency>
     </dependencies>
-
 
 </project>
